Remove thread lang
